samples/_failures_safe/1761718567_edb89f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e2ee00d.c: In function ‘state_machine_handle_event’:
./samples/SAFE/__tmp_2e2ee00d.c:147:13: error: expected declaration or statement at end of input
  147 |             return process_done_state(sm, event_data);
      |             ^~~~~~
./samples/SAFE/__tmp_2e2ee00d.c:147:13: error: expected declaration or statement at end of input
